--- a/index.html
+++ b/index.html
@@ -5,9 +5,81 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Candidatos</title>
 </head>
-<body>
-    
+<h1>Home</h1>
+<style>
+    body {
+        font-family: Arial, sans-serif;
+        margin: 0;
+        padding: 0;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        min-height: 100vh;
+        background-color: #f4f4f4;
+    }
 
-    
+    .description {
+        text-align: center;
+        max-width: 600px;
+        padding: 20px;
+        background: #fff;
+        border-radius: 10px;
+        box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    }
+
+    .links {
+        position: fixed;
+        bottom: 20px;
+        right: 20px;
+        display: flex;
+        gap: 10px;
+    }
+
+    .links a {
+        text-decoration: none;
+        color: white;
+        background: #007BFF;
+        padding: 10px 15px;
+        border-radius: 5px;
+        font-size: 14px;
+        transition: background 0.3s;
+    }
+
+    .links a:hover {
+        background: #0056b3;
+    }
+
+    .home-button {
+        position: fixed;
+        top: 20px;
+        left: 20px;
+        text-decoration: none;
+        color: white;
+        background: #007BFF;
+        padding: 10px 15px;
+        border-radius: 5px;
+        font-size: 14px;
+        transition: background 0.3s;
+    }
+
+    .home-button:hover {
+        background: #0056b3;
+    }
+</style>
+<body>
+    <a href="file:///C:/Users/Usuario/Desktop/HTML/index.html" class="home-button">Home</a>
+
+    <div class="description">
+        <h1>Bienvenido a la página de los candidatos</h1>
+        <p>
+            En esta página podrás ver a los candidatos, sus propuestas,
+            y sus biografías.
+    </div>
+
+    <div class="links">
+        <a href="https://www.cne.gob.ec/elecciones-generales-2025/">Información CNE</a>
+        <a href="https://www.presidencia.gob.ec/">Presidencia</a>
+    </div>
 </body>
 </html>
