--- a/index.html
+++ b/index.html
@@ -66,15 +66,36 @@
     .home-button:hover {
         background: #0056b3;
     }
+
+    .candidate-button {
+        position: fixed;
+        top: 60px;
+        left: 20px;
+        text-decoration: none;
+        color: white;
+        background: #007BFF;
+        padding: 10px 15px;
+        border-radius: 5px;
+        font-size: 14px;
+        transition: background 0.3s;
+    }
+
+    .candidate-button:hover {
+        background: #0056b3;
+    }
+
+
 </style>
 <body>
-    <a href="file:///C:/Users/Usuario/Desktop/HTML/index.html" class="home-button">Home</a>
+    <a href="index.html" class="home-button">Home</a>
+    <a href="candidate1.html" class="candidate-button">Candidato 1</a>
 
     <div class="description">
         <h1>Bienvenido a la página de los candidatos</h1>
         <p>
-            En esta página podrás ver a los candidatos, sus propuestas,
-            y sus biografías.
+            Aquí podrás ver la información sobre los candidatos,
+            sus propuestas y sus biografías.
+        </p>
     </div>
 
     <div class="links">
@@ -83,3 +104,6 @@
     </div>
 </body>
 </html>
+
+
+
