--- a/candidate1.html
+++ b/candidate1.html
@@ -67,6 +67,23 @@
     .candidate-button:hover {
         background: #1e7e34;
     }
+
+    .candidate2-button {
+            position: fixed;
+            top: 100px;
+            left: 20px;
+            text-decoration: none;
+            color: white;
+            background: #007BFF;
+            padding: 10px 15px;
+            border-radius: 5px;
+            font-size: 14px;
+            transition: background 0.3s;
+        }
+
+        .candidate2-button:hover {
+            background: #0056b3;
+        }
     .links {
         position: fixed;
         bottom: 20px;
@@ -91,7 +108,9 @@
     </style>
 </head>
 <body>
-    <a href="index.html" class="home-button">Home</a> <a href="candidate1.html" class="candidate-button">Candidato 1</a>
+    <a href="index.html" class="home-button">Home</a> 
+    <a href="candidate1.html" class="candidate-button">Candidato 1</a>
+    <a href="candidate2.html" class="candidate2-button">Candidato 2</a>
 
     <div class="candidate-content">
         <img src="candidato.png" alt="Candidato 1">
