--- a/index.html
+++ b/index.html
@@ -84,11 +84,28 @@
         background: #0056b3;
     }
 
+    .candidate2-button {
+        position: fixed;
+        top: 100px;
+        left: 20px;
+        text-decoration: none;
+        color: white;
+        background: #007BFF;
+        padding: 10px 15px;
+        border-radius: 5px;
+        font-size: 14px;
+        transition: background 0.3s;
+    }
+
+    .candidate2-button:hover {
+        background: #0056b3;
+    }
 
 </style>
 <body>
     <a href="index.html" class="home-button">Home</a>
     <a href="candidate1.html" class="candidate-button">Candidato 1</a>
+    <a href="candidate2.html" class="candidate2-button">Candidato 2</a>
 
     <div class="description">
         <h1>Bienvenido a la página de los candidatos</h1>
