--- a/candidate1.html
+++ b/candidate1.html
@@ -65,7 +65,7 @@
     }
 
     .candidate-button:hover {
-        background: #1e7e34;
+        background: #0056b3;
     }
 
     .candidate2-button {
@@ -84,6 +84,23 @@
         .candidate2-button:hover {
             background: #0056b3;
         }
+
+        .candidate3-button {
+        position: fixed;
+        top: 140px;
+        left: 20px;
+        text-decoration: none;
+        color: white;
+        background: #007BFF;
+        padding: 10px 15px;
+        border-radius: 5px;
+        font-size: 14px;
+        transition: background 0.3s;
+    }
+
+    .candidate3-button:hover {
+        background: #0056b3;
+    }
     .links {
         position: fixed;
         bottom: 20px;
@@ -108,9 +125,10 @@
     </style>
 </head>
 <body>
-    <a href="index.html" class="home-button">Home</a> 
+    <a href="index.html" class="home-button">Home</a>
     <a href="candidate1.html" class="candidate-button">Candidato 1</a>
     <a href="candidate2.html" class="candidate2-button">Candidato 2</a>
+    <a href="candidate3.html" class="candidate3-button">Candidato 3</a>
 
     <div class="candidate-content">
         <img src="candidato.png" alt="Candidato 1">
